--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 body{
 font-family: monospace, monospace, monospace
+
 }
 p{
     padding: 10px;
@@ -7,7 +8,7 @@ p{
 h1{
     padding-left: 10px;
 }
-#weatherDis{
+div{
     display: inline-block;
     margin-right: 20px;
     background-color: dimgray;
